# olm

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  dev.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: auto-merge.yml  test.yml
collection/bw15x15/: config.olm.json
collection/ce14x14/: config.olm.json
collection/svea100-0/: config.olm.json
collection/w17x17/: coarse-check.olm.json  config.olm.json  fine-check.olm.json
docs/source/: developers.md  step-by-step.rst
docs/source/create/: check.rst  generate.rst  model.rst
docs/source/create/schema/: scale.olm.assemble.arpdata_txt.json  scale.olm.check.GridGradient.json  scale.olm.check.LowOrderConsistency.json  scale.olm.check.sequencer.json
examples/mox_quick/: config.olm.json
examples/uox_quick/: config.olm.json
notebooks/: sandbox.ipynb
notebooks/demos/: demo_GridGradient.ipynb  demo_Refinement.ipynb
scale/olm/: __main__.py  assemble.py  check.py  core.py  internal.py  report.py
scale/olm/generate/: comp.py  root.py  static.py  time.py
scale/olm/templates/report/: olm-report.yaml  scale-short.jt.rst
scale/olm/variants/mox_quick/: config.olm.json  files.json
scale/olm/variants/uox_quick/: config.olm.json  files.json
testing/: scale_olm_assemble_advanced_test.py  scale_olm_assemble_enhanced_test.py  scale_olm_check_advanced_test.py  scale_olm_check_convergence_test.py  scale_olm_check_enhanced_test.py  scale_olm_check_optimized_test.py  scale_olm_check_test.py  scale_olm_cli_test.py  scale_olm_core_ScaleRunner_test.py  scale_olm_core_advanced_test.py  scale_olm_example_regression_test.py  scale_olm_generate_test.py  scale_olm_internal_advanced_test.py  scale_olm_report_test.py  scale_olm_run_test.py  test_functions_manifest.txt
testing/baselines/: example_consistency.json
(+6 files in other folders)
