[project]
name = "scale-olm"
version = "0.14.3"
description = "ORIGEN Library Manager: A tool for building and managing ORIGEN reactor data libraries"
authors = [
    { name = "William Wieselquist", email = "ww5@ornl.gov" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["SCALE", "ORIGEN", "Library"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click<8.2",
    "h5py",
    "imohash",
    "jinja2",
    "matplotlib",
    "numpy",
    "pydantic",
    "pygments",
    "scipy",
    "structlog",
    "tqdm",
    "typing-extensions",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "click-extra<4.8",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-jsonschema",
    "sphinx-notfound-page",
    "sphinx-rtd-theme",
    "sphinx-toolbox",
    "tomli",
]
notebooks = [
    "ipykernel",
    "jupyterlab",
    "testbook",
]
dev = [
    "black",
    "bumpversion",
    "flake8",
    "pre-commit",
]

[project.urls]
documentation = "https://scale-olm.readthedocs.io"
bug-tracker = "https://github.com/wawiesel/olm/issues"
source = "https://github.com/wawiesel/olm"

[project.scripts]
olm = "scale.olm.__main__:olm"

[tool.setuptools.packages.find]
include = ["scale.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
